Fixed clipping border of Nav buttons

--- a/style/about.css
+++ b/style/about.css
@@ -33,7 +33,6 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: var(--dark-blue);
-    border-radius: 25px;
 }
 
 ul li {
