--- a/style/color.css
+++ b/style/color.css
@@ -39,7 +39,6 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: var(--dark-blue);
-    border-radius: 25px;
 }
 
 ul li {
